Added dynamic base href

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
     <!-- build:js(.) scripts/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
+    <script type="text/javascript">
+      document.write("<base href='http://" + document.location.host + "' />");
+    </script>
   </head>
   <body>
     <!--[if lt IE 10]>
