Use document href

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
     <script type="text/javascript">
-      document.write("<base href='http://" + document.location.host + "' />");
+      document.write("<base href='" + document.location.href + "' />");
     </script>
   </head>
   <body>
