Moved function to dedicated class and add label

--- a/src/index.html
+++ b/src/index.html
@@ -55,8 +55,9 @@
     <script src="app/index.js"></script>
     <script src="app/view/view.controller.js"></script>
     <script src="app/main/main.controller.js"></script>
-    <script src="components/scaffolder/scaffolder.directive.js"></script>
     <script src="components/scaffolder/scaffolder.controller.js"></script>
+    <script src="components/scaffolder/scaffolder.directive.js"></script>
+    <script src="components/scaffolder/scaffolder.service.js"></script>
 
     <!-- inject:partials -->
     <!-- angular templates will be automaticaly converted in js and inserted here -->
