--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Iframe Scaffolder</title>
-    <meta name="description" content="">
+    <meta name="description" content="This tool helps you to quickly build a mosaic of iframes.">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
