--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,19 @@
     <title>Iframe Scaffolder</title>
     <meta name="description" content="This tool helps you to quickly arrange several iframes together.">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+    <!-- for Facebook -->
+    <meta property="og:image" content="http://pirhoo.github.io/iframe-scaffolder/assets/images/iframe.png"/>
+    <meta property="og:title" content="Iframe Scaffolder"/>
+    <meta property="og:description" content="This tool helps you to quickly arrange several iframes together.">
+    <meta property="og:site_name" content="Pirhoo on Github"/>
+    <meta property="og:type" content="tool" />
+
+    <!-- for Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Iframe Scaffolder - @pirhoo" />
+    <meta name="twitter:description" content="This tool helps you to quickly arrange several iframes together." />
+    <meta name="twitter:image" content="http://pirhoo.github.io/iframe-scaffolder/assets/images/iframe.png" />
 
     <!-- build:css({.tmp,app}) styles/vendor.css -->
     <!-- bower:css -->
