--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Iframe Scaffolder"/>
     <meta property="og:description" content="This tool helps you to quickly arrange several iframes together.">
     <meta property="og:site_name" content="Pirhoo on Github"/>
-    <meta property="og:type" content="tool" />
+    <meta property="og:type" content="website" />
 
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
