--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
     <script src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
     <script src="bower_components/angular-zeroclipboard/src/angular-zeroclipboard.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-ui-utils/validate.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
