--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,8 @@
     <script src="bower_components/angular-zeroclipboard/src/angular-zeroclipboard.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-ui-utils/validate.js"></script>
+    <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="bower_components/angular-ui-sortable/sortable.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
