--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <!-- endbuild -->
     <script type="text/javascript">
       var href = document.location.protocol + "//" + document.location.host + document.location.pathname;
-      document.write("<base href='" + href + "' />");
+      document.write("<base href='" + href + "#/' />");
     </script>
   </head>
   <body>
