--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,7 @@
     <script src="app/index.js"></script>
     <script src="app/view/view.controller.js"></script>
     <script src="app/main/main.controller.js"></script>
+    <script src="app/fork/fork.controller.js"></script>
     <script src="components/scaffolder/scaffolder.controller.js"></script>
     <script src="components/scaffolder/scaffolder.directive.js"></script>
     <script src="components/scaffolder/scaffolder.service.js"></script>
