Added angular socialshare

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,7 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
+    <script src="bower_components/angularjs-socialshare/dist/angular-socialshare.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
