--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,8 @@
     <!-- endbuild -->
 
     <!-- build:js({src,.tmp}) scripts/app.js -->
+    <script src="app/index.modules.js"></script>
+    <script src="app/index.ga.js"></script>
     <script src="app/index.js"></script>
     <script src="app/view/view.controller.js"></script>
     <script src="app/main/main.controller.js"></script>
