--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,7 @@
     <script src="components/scaffolder/scaffolder.controller.js"></script>
     <script src="components/scaffolder/scaffolder.directive.js"></script>
     <script src="components/scaffolder/scaffolder.service.js"></script>
+    <script src="components/select-on-click/select-on-click.directive.js"></script>
 
     <!-- inject:partials -->
     <!-- angular templates will be automaticaly converted in js and inserted here -->
