Saved previous slide index

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
@@ -60,10 +61,11 @@
     <script src="bower_components/angular-ui-utils/validate.js"></script>
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/angular-ui-sortable/sortable.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angularjs-socialshare/dist/angular-socialshare.min.js"></script>
+    <script src="bower_components/velocity/velocity.js"></script>
+    <script src="bower_components/velocity/velocity.ui.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -74,6 +76,7 @@
     <script src="app/view/view.controller.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/fork/fork.controller.js"></script>
+    <script src="components/scaffolder/scaffolder.animation.js"></script>
     <script src="components/scaffolder/scaffolder.controller.js"></script>
     <script src="components/scaffolder/scaffolder.directive.js"></script>
     <script src="components/scaffolder/scaffolder.service.js"></script>
