Refactor states declaration

--- a/src/index.html
+++ b/src/index.html
@@ -73,8 +73,11 @@
     <script src="app/index.modules.js"></script>
     <script src="app/index.ga.js"></script>
     <script src="app/index.js"></script>
+    <script src="app/view/view.js"></script>
     <script src="app/view/view.controller.js"></script>
+    <script src="app/main/main.js"></script>
     <script src="app/main/main.controller.js"></script>
+    <script src="app/fork/fork.js"></script>
     <script src="app/fork/fork.controller.js"></script>
     <script src="components/scaffolder/scaffolder.animation.js"></script>
     <script src="components/scaffolder/scaffolder.controller.js"></script>
