--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,7 @@
     <script src="app/fork/fork.js"></script>
     <script src="app/fork/fork.controller.js"></script>
     <script src="components/scaffolder/scaffolder.animation.js"></script>
+    <script src="components/scaffolder/scaffolder.constants.js"></script>
     <script src="components/scaffolder/scaffolder.controller.js"></script>
     <script src="components/scaffolder/scaffolder.directive.js"></script>
     <script src="components/scaffolder/scaffolder.service.js"></script>
