Added shorten controller

--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,8 @@
     <script src="app/main/main.controller.js"></script>
     <script src="app/fork/fork.js"></script>
     <script src="app/fork/fork.controller.js"></script>
+    <script src="app/shorten/shorten.js"></script>
+    <script src="app/shorten/shorten.controller.js"></script>
     <script src="components/iframe-indicator/iframe-indicator.directive.js"></script>
     <script src="components/scaffolder/scaffolder.animation.js"></script>
     <script src="components/scaffolder/scaffolder.constants.js"></script>
