Added more examples and json view

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,8 @@
     <script src="app/index.js"></script>
     <script src="app/view/view.js"></script>
     <script src="app/view/view.controller.js"></script>
+    <script src="app/json/json.js"></script>
+    <script src="app/json/json.controller.js"></script>
     <script src="app/main/main.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/fork/fork.js"></script>
